css/styles.css
/*!! Default set-ups !!*/

html {
    margin-bottom: 5vh;
    background-color: rgb(20, 20, 20);
    color: white;
}

* {
    font-family: monospace;
    transition: all 0.5s ease;
}

.space-on-top {
    padding-top: 2vh;
}

.gradient {
    background: linear-gradient(to right, #1461FF, #00FFFF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

header {
    position: sticky;
    top: 0;
}

nav {
    box-sizing: border-box;
    z-index: 1;
    background-color: rgb(20, 20, 20);

    display: flex;
    flex-direction: row;
    align-items: center;

    /*? initial values */
    border-bottom: 1px solid cyan;

    height: 70px;
}

.title{
    margin: 0;
}

.nav-links {
    display: flex;
    flex-wrap: nowrap;

    align-items: center;

    white-space: nowrap;
}

.nav-links ul {
    margin: 0;
    padding: 1.5vw;
    font-size: 20px;
}

.nav-links ul a {
    text-decoration: none;
    color: #FFFFFF;
}

.margin {
    margin-left: 2vw;
}

.big-margin {
    margin-left: 4vw;
}

a {
    color: #257afb
}

.accent-color {
    /*? initial value */
    color: cyan
}

.no-bottom-margin {
    margin-bottom: 0px;
}

/*!! Sizes !!*/
h1 {
    font-size: 40px;
}

h2 {
    font-size: 30px;
}

h3 {
    font-size: 20px;
}

p,
li {
    font-size: 15px;
    text-align: justify;
    max-width: 90vw;
}


/*!! Others !!*/
.socials div {
    /* vertically center socials section */
    display: inherit;
    /* (flex) */
    align-items: center;
}

.socials a {
    /* separate images from their description */
    padding: 10px;
}

.socials {
    /* make socials horizontal instead of vertical */
    display: flex;
    flex-wrap: wrap;
    justify-content: left;
}

.discord-logo {
    max-height: 20px;
    width: auto
}

.twitter-logo {
    max-height: 20px;
    width: auto
}

.github-logo {
    max-height: 30px;
    width: auto
}

@media screen and (max-width: 864px) {
    .nav-links {
        display: none;
    }
}

